--- a/ThermalLabelWebEditorSample/index.html
+++ b/ThermalLabelWebEditorSample/index.html
@@ -73,9 +73,9 @@
                                     </ul>
                                 </div>
                                 <!--<button id="tlbSave" type="button" title="" class="btn btn-default"
-                                        data-content="Save Label" data-trigger="hover" data-placement="bottom" onclick="tleditor.save('myThermalLabel');">
-                                    <i class="flaticon-save"></i>
-                                </button>-->
+                data-content="Save Label" data-trigger="hover" data-placement="bottom" onclick="tleditor.save('myThermalLabel');">
+            <i class="flaticon-save"></i>
+        </button>-->
                                 <button id="tlbPrint" type="button" title="" class="btn btn-default" data-target="#printInfo" data-toggle="modal"
                                         data-content="Print Label. NOTE: Client Printing requires JSPrintManager utility installed!" data-trigger="hover" data-placement="bottom">
                                     <i class="flaticon-print"></i>
@@ -218,7 +218,31 @@
                                     <i class="flaticon-delete"></i>
                                 </button>
                             </div>
-
+                            <br />
+                            <div class="btn-group" role="group">
+                                <button type="button" title="" class="btn btn-default">[</button>
+                                <button id="tlbStartGroup" type="button" title="" class="btn btn-default" onclick="UIEditor.startGroup()"
+                                        data-content="Start a new group" data-trigger="hover" data-placement="bottom">
+                                    Start new group...
+                                </button>
+                                <button id="tlbGroupSelectedItems" type="button" title="" class="btn btn-default" style="display:none" onclick=""
+                                        data-content="Num of selected items in the group" data-trigger="hover" data-placement="bottom" disabled>
+                                    0 items in the group
+                                </button>
+                                <button id="tlbCreateGroup" type="button" title="" class="btn btn-info" style="display: none" onclick="UIEditor.createGroup()"
+                                        data-content="Create and close group" data-trigger="hover" data-placement="bottom">
+                                    Create
+                                </button>
+                                <button id="tlbCancelGroup" type="button" title="" class="btn btn-danger" style="display: none" onclick="UIEditor.cancelGroup()"
+                                        data-content="Cancel group creation" data-trigger="hover" data-placement="bottom">
+                                    Cancel
+                                </button>
+                                <button id="tlbUngroup" type="button" title="" class="btn btn-danger" style="display: none" onclick="UIEditor.unGroup()"
+                                        data-content="Ungroup" data-trigger="hover" data-placement="bottom">
+                                    Ungroup...
+                                </button>
+                                <button type="button" title="" class="btn btn-default">]</button>
+                            </div>
 
 
                         </div>
@@ -832,8 +856,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
+        </div>
 
 
         <script src="Scripts/fabric-1.5.0.js"></script>
@@ -845,8 +868,7 @@
 
         <!--JSPrintManager scripts-->
         <script src="scripts/JSPrintManager.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/gildas-lormeau/zip.js/dist/zip-full.min.js"></script>
-
+        
         <script src="Scripts/printing.js"></script>
         <!--end JSPrintManager scripts-->
 
